@@ -316,7 +316,7 @@ CONFIG_STDIO_BUFFER_SIZE=256
 CONFIG_STDIO_LINEBUFFER=y
 CONFIG_NUNGET_CHARS=2
 CONFIG_PREALLOC_MQ_MSGS=32
-CONFIG_MQ_MAXMSGSIZE=32
+CONFIG_MQ_MAXMSGSIZE=48
 CONFIG_MAX_WDOGPARMS=4
 CONFIG_PREALLOC_WDOGS=32
 CONFIG_PREALLOC_TIMERS=8
