@@ -1323,7 +1323,7 @@ CONFIG_LCD_RPORTRAIT=y
 # STM3240G-EVAL specific LCD settings
 #
 CONFIG_STM32_ILI9320_DISABLE=n
-CONFIG_STM32_ILI9325_DISABLE=y
+CONFIG_STM32_ILI9325_DISABLE=n
 
 #
 # Settings for examples/uip
