@@ -709,7 +709,7 @@ CONFIG_STDIO_BUFFER_SIZE=64
 CONFIG_STDIO_LINEBUFFER=y
 CONFIG_NUNGET_CHARS=2
 CONFIG_PREALLOC_MQ_MSGS=8
-CONFIG_MQ_MAXMSGSIZE=32
+CONFIG_MQ_MAXMSGSIZE=48
 CONFIG_MAX_WDOGPARMS=2
 CONFIG_PREALLOC_WDOGS=8
 CONFIG_PREALLOC_TIMERS=4
@@ -1347,7 +1347,7 @@ CONFIG_LCD_RPORTRAIT=n
 # STM3240G-EVAL specific LCD settings
 #
 CONFIG_STM32_ILI9320_DISABLE=n
-CONFIG_STM32_ILI9325_DISABLE=y
+CONFIG_STM32_ILI9325_DISABLE=n
 
 #
 # Settings for examples/uip
