@@ -1,8 +1,8 @@
 /****************************************************************************
  * graphics/nxmu/nx_filltrapezoid.c
  *
- *   Copyright (C) 2008-2009, 2011 Gregory Nutt. All rights reserved.
- *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+ *   Copyright (C) 2008-2009, 2011-2012 Gregory Nutt. All rights reserved.
+ *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -98,6 +98,8 @@ int nx_filltrapezoid(NXWINDOW hwnd, FAR const struct nxgl_rect_s *clip,
   int ret;
   int i;
 
+  /* Some debug-only sanity checks */
+
 #ifdef CONFIG_DEBUG
   if (!wnd || !wnd->conn || !trap || !color)
     {
@@ -111,22 +113,31 @@ int nx_filltrapezoid(NXWINDOW hwnd, FAR const struct nxgl_rect_s *clip,
   outmsg.msgid = NX_SVRMSG_FILLTRAP;
   outmsg.wnd   = wnd;
 
+  /* If no clipping window was provided, then use the size of the entire window */
+
   if (clip)
     {
       nxgl_rectcopy(&outmsg.clip, clip);
     }
   else
     {
-      memset(&outmsg.clip, 0, sizeof(struct nxgl_rect_s));
+      nxgl_rectcopy(&outmsg.clip, &wnd->bounds);
     }
+
+  /* Copy the trapezod and the color into the message */
+
   nxgl_trapcopy(&outmsg.trap, trap);
 
+#if CONFIG_NX_NPLANES > 1
   for (i = 0; i < CONFIG_NX_NPLANES; i++)
+#else
+  i = 0;
+#endif
     {
       outmsg.color[i] = color[i];
     }
 
-  /* Forward the fill command to the server */
+  /* Forward the trapezoid fill command to the server */
 
   ret = mq_send(wnd->conn->cwrmq, &outmsg,
                 sizeof(struct nxsvrmsg_filltrapezoid_s), NX_SVRMSG_PRIO);
